# wa-agents

./: README.md  pyproject.toml
caseflow_agents/: DO_spaces_dirlock.py  DO_spaces_io.py  DO_spaces_storage.py  DO_spaces_storage_testing.py  agent.py  basemodels.py  casehandlerbase.py  whatsapp_functions.py
docs/: Dockerfile.fastapi  demo_webhook.py  example_casehandler_multi_turn_tools.py  example_casehandler_single_turn_no_llm.py  example_casehandler_single_turn_with_llm.py  examples_chatbot_patterns.md  history.md
scripts/: check_supabase_tables.py
tests/: manual_do_bucket_io.py  test_queue_worker.py  test_supabase_storage.py
wa_agents/: DO_spaces_io.py  DO_spaces_storage.py  DO_spaces_storage_testing.py  WhatsAppAPIServer.py  agent.py  basemodels.py  case_handler_base.py  casehandlerbase.py  do_bucket_io.py  do_bucket_lock.py  do_bucket_storage.py  listener.py  queue_db.py  queue_worker.py  storage_backend.py  supabase_storage.py  test_do_bucket_io.py  test_supabase_storage.py  whatsapp_functions.py
wa_agents/sql/: DDL.sql  claim_next_queue_payload.sql  dedup_exists.sql  enqueue_queue_payload.sql  ensure_user.sql  get_case.sql  get_case_index.sql  get_case_message_ids.sql  get_message.sql  get_messages.sql  get_next_case_id.sql  get_user_data.sql  insert_message.sql  insert_webhook_message.sql  insert_webhook_payload.sql  insert_webhook_status.sql  mark_queue_done.sql  mark_queue_error.sql  nuclear_option.sql  set_case_index.sql  upsert_case.sql  upsert_user_data.sql
