[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-agents"
version = "1.0.0"
description = "WhatsApp Agents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Luis Ignacio Reyes Castro", email = "luis.i.reyes.castro@gmail.com" },
]
dependencies = [
  "Babel>=2.17.0",
  "boto3>=1.40.27",
  "botocore>=1.40.27",
  "Flask>=3.1.2",
  "mistralai>=1.9.11,<2.0.0",
  "openai>=2.9.0",
  "phonenumbers>=9.0.13",
  "pydantic>=2.12.5",
  "requests>=2.32.5",
  "sofia-utils>=1.0.0",
  "transitions>=0.9.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wa_agents*"]
