[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-agents"
version = "1.0.0"
description = "WhatsApp Agents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Luis Ignacio Reyes Castro", email = "luis.i.reyes.castro@gmail.com" },
]
dependencies = [
  "aioboto3>=15.5.0,<16.0.0",
  "aiosqlite>=0.21.0",
  "Babel>=2.17.0",
  "boto3>=1.40.46,<1.40.62",
  "botocore>=1.40.46,<1.40.62",
  "Flask>=3.1.2",
  "httpx>=0.28.1",
  "openai>=2.9.0",
  "phonenumbers>=9.0.13",
  "pydantic>=2.12.5",
  "sofia-utils[psycopg]>=1.0.0",
  "transitions>=0.9.3",
  "types-aiobotocore-s3==2.25.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wa_agents*"]

[tool.setuptools.package-data]
wa_agents = ["sql/*.sql"]
